Fixing bug with header and footer aligning

--- a/frontend/src/components/FoodSaverHeader/FoodSaverHeader.scss
+++ b/frontend/src/components/FoodSaverHeader/FoodSaverHeader.scss
@@ -1,5 +1,5 @@
 .food-saver-header {
-	width: 100vw;
+	width: 100%;
 	margin-left: auto;
 	margin-right: auto;
 	height: min-content;
@@ -7,9 +7,8 @@
 	font-family: "Montserrat", sans-serif;
 	background-image: url(../../images/FoodSaverHeaderImage.png);
 	background-size: cover;
-	// display: flex;
-	// flex-direction: column;
-	// align-items: center;
+	display: flex;
+	flex-direction: column;
 	
 }
 
@@ -59,3 +58,9 @@
 //     font-family: "Montserrat", sans-serif;
 
 // }
+
+@media only screen and (max-width: 600px) {
+	body {
+	  background-color: lightblue;
+	}
+  }
