--- a/frontend/src/components/Footer/Footer.scss
+++ b/frontend/src/components/Footer/Footer.scss
@@ -10,7 +10,7 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	padding: 16px;
+	padding: 3vw 0 3vw 0;
 }
 
 .footer-title {
